change to absolute

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               alt="pattern-divider-mobile"
             />
           </div>
-          <div class="card__image-icon">
+          <div class="card__image-container">
             <button class="card__button-roll" data-button-generate>
               <img src="/images/icon-dice.svg" alt="dice" />
             </button>
